force-app/main/default/objects/Temp_Opportunity_Activity__c/Temp_Opportunity_Activity__c.object-meta.xml
<CustomObject>
    <label>Temp Opportunity Activity</label>
    <nameField>
        <displayFormat>TOA-{yymmdd}-{00000}</displayFormat>
        <label>Temp Opportunity Activity No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Opportunity Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>