force-app/main/default/objects/Temp_Opportunity_Activity__c/fields/TransactionName__c.field-meta.xml
<CustomField>
    <fullName>TransactionName__c</fullName>
    <label>Temp Opportunity Activity Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XP11</fullName>
            </value>
            <value>
                <fullName>ZP21</fullName>
            </value>
            <value>
                <fullName>ZP32</fullName>
            </value>
            <value>
                <fullName>XP31</fullName>
            </value>
            <value>
                <fullName>ZP31</fullName>
            </value>
            <value>
                <fullName>XP32</fullName>
            </value>
            <value>
                <fullName>ZP62</fullName>
            </value>
            <value>
                <fullName>ZPZ3</fullName>
            </value>
            <value>
                <fullName>ZP61</fullName>
            </value>
            <value>
                <fullName>XP41</fullName>
            </value>
            <value>
                <fullName>XP42</fullName>
            </value>
            <value>
                <fullName>XP43</fullName>
            </value>
            <value>
                <fullName>XP44</fullName>
            </value>
            <value>
                <fullName>XP51</fullName>
            </value>
            <value>
                <fullName>XP52</fullName>
            </value>
            <value>
                <fullName>ZP82</fullName>
            </value>
            <value>
                <fullName>XP57</fullName>
            </value>
            <value>
                <fullName>ZPZ2</fullName>
            </value>
            <value>
                <fullName>XPX1</fullName>
            </value>
            <value>
                <fullName>ZAC1</fullName>
            </value>
            <value>
                <fullName>ZPZ1</fullName>
            </value>
            <value>
                <fullName>ZAC4</fullName>
            </value>
            <value>
                <fullName>ZPG1</fullName>
            </value>
            <value>
                <fullName>2.2.1.</fullName>
            </value>
            <value>
                <fullName>2.2.2.</fullName>
            </value>
            <value>
                <fullName>2.3.2.</fullName>
            </value>
            <value>
                <fullName>2.3.3.</fullName>
            </value>
            <value>
                <fullName>2.4.5.</fullName>
            </value>
            <value>
                <fullName>2.5.1.</fullName>
            </value>
            <value>
                <fullName>2.5.3.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>